@@ -45,7 +45,8 @@ Changes in @NEW@:
     * r.Install will replace files which are read-only (CNY-1634)
     * Mirroring using group recursion no longer creates
       cross-repository relative changesets (CNY-1640)
-
+    * A bug that caused an unhandled exception when creating a local rollback
+      for a trove that had missing troveinfo has been fixed
 
   o Client Changes:
     * The conaryclient module now exposes ChangeSetFromFile to instantiate
